--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
   <body>
     <header>
       <div class="container">
-        <nav class="flex iteam-center justify-between">
+        <nav id="main-vav"class="flex iteam-center justify-between">
           <div class="left flex iteam-center">
             <div class="branding">
               <img src="./images/images/logo.svg" alt="" />
             </div>
             <a href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">Services</a>
-            <a href="#">Pages</a>
-            <a href="#">Blog</a>
+            <a href="#about">About</a>
+            <a href="#services">Services</a>
+            <a href="#work">Work</a>
+            <a href="#blog">Blog</a>
           </div>
           <div class="right">
-            <button class="btn btn-primary">Contact</button>
+            <a href="#contact"><button id="#contact"class="btn btn-primary">Contact</button></a>
           </div>
         </nav>
         <div class="hero flex iteam-center justify-between">
@@ -54,7 +54,7 @@
         </div>
       </div>
     </header>
-    <section class="about">
+    <section id="about"class="about">
       <div class="container flex items-center">
         <div class="flex-1">
           <img class="about-me-img" src="/images/images/picc5.jpeg" alt="" />
@@ -116,7 +116,7 @@
         </div>
       </div>
     </section>
-    <section class="services">
+    <section id="services" class="services">
       <div class="container">
         <h1 class="section-heading"><span>Our</span> Services</h1>
         <p>Hello Fellows here is our services</p>
@@ -237,7 +237,7 @@
         <div class="slider-dots"></div>
       </div>
     </section>
-    <section class="work">
+    <section id="work"class="work">
       <div class="container">
         <h1 class="section-heading"><span>Our</span>Works</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
@@ -287,7 +287,7 @@
         </div>
       </div>
     </section>
-    <section class="blog">
+    <section id="blog"class="blog">
       <div class="container">
         <h1 class="section-heading"><span>Our</span> Blogs</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
@@ -349,7 +349,7 @@
         </div>
       </div>
     </section>
-    <section class="contact">
+    <section id="contact"class="contact">
       <div class="container">
         <h1 class="section-heading">Contact<span> Us</span></h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
