mobile nav added

--- a/index.html
+++ b/index.html
@@ -16,9 +16,23 @@
   </head>
 
   <body>
+    <div class="site-main-wrapper">
+      <button class="hamberger">
+        <img src="./images/images/hamberger.svg" alt="">
+      </button>
+      <div class="mobile-nav">
+        <button class="times"><img src="./images/images/times.svg" alt=""></button>
+        <ul>
+          <li><a href="">Home</a></li>
+          <li><a href="">About</a></li>
+          <li><a href="">Services</a></li>
+          <li><a href="">Work</a></li>
+          <li><a href="">Blog</a></li>
+        </ul>
+      </div>
     <header>
       <div class="container">
-        <nav id="main-vav"class="flex iteam-center justify-between">
+        <nav id="main-nav"class="flex iteam-center justify-between">
           <div class="left flex iteam-center">
             <div class="branding">
               <img src="./images/images/logo.svg" alt="" />
@@ -35,7 +49,7 @@
         </nav>
         <div class="hero flex iteam-center justify-between">
           <div class="left flex-1">
-            <img src="/images/images/picc4.jpeg" alt="" />
+            <img src="./images/images/picc4.jpeg" alt="" />
           </div>
           <div class="right flex-1 justify-center">
             <h6>Nityananda Behera</h6>
@@ -57,7 +71,7 @@
     <section id="about"class="about">
       <div class="container flex items-center">
         <div class="flex-1">
-          <img class="about-me-img" src="/images/images/picc5.jpeg" alt="" />
+          <img class="about-me-img" src="./images/images/picc5.jpeg" alt="" />
         </div>
         <div class="flex-1">
           <h1>About <span>Me</span></h1>
@@ -122,7 +136,7 @@
         <p>Hello Fellows here is our services</p>
         <div class="card-wrapper">
           <div class="card">
-            <img src="/images/images/brush.svg" alt="" />
+            <img src="./images/images/brush.svg" alt="" />
             <h2>Graphic Design</h2>
             <p>
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus,
@@ -130,7 +144,7 @@
             </p>
           </div>
           <div class="card">
-            <img src="/images/images/brush.svg" alt="" />
+            <img src="./images/images/brush.svg" alt="" />
             <h2>Graphic Design</h2>
             <p>
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus,
@@ -138,7 +152,7 @@
             </p>
           </div>
           <div class="card">
-            <img src="/images/images/brush.svg" alt="" />
+            <img src="./images/images/brush.svg" alt="" />
             <h2>Graphic Design</h2>
             <p>
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus,
@@ -146,7 +160,7 @@
             </p>
           </div>
           <div class="card">
-            <img src="/images/images/brush.svg" alt="" />
+            <img src="./images/images/brush.svg" alt="" />
             <h2>Graphic Design</h2>
             <p>
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus,
@@ -154,7 +168,7 @@
             </p>
           </div>
           <div class="card">
-            <img src="/images/images/brush.svg" alt="" />
+            <img src="./images/images/brush.svg" alt="" />
             <h2>Graphic Design</h2>
             <p>
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus,
@@ -162,7 +176,7 @@
             </p>
           </div>
           <div class="card">
-            <img src="/images/images/brush.svg" alt="" />
+            <img src="./images/images/brush.svg" alt="" />
             <h2>Graphic Design</h2>
             <p>
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus,
@@ -178,7 +192,10 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat dolorum
         quas ad.
       </p>
-      <button class="btn btn-primary">Download CV</button>
+      <div>
+        <button  class="btn btn-primary">Download CV</button>
+      </div>
+      
     </section>
     <section class="review">
       <div class="container">
@@ -186,7 +203,7 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
         <div class="slider">
           <div class="slide">
-            <img src="/images/images/lady.png" alt="" />
+            <img src="./images/images/lady.png" alt="" />
             <p>
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla
               tempore eveniet eligendi pariatur velit recusandae, expedita
@@ -198,7 +215,7 @@
             <span>-Nitya Devil,developer</span>
           </div>
           <div class="slide">
-            <img src="/images/images/lady.png" alt="" />
+            <img src="./images/images/lady.png" alt="" />
             <p>
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla
               tempore eveniet eligendi pariatur velit recusandae, expedita
@@ -210,7 +227,7 @@
             <span>-Nitya Devil,developer</span>
           </div>
           <div class="slide">
-            <img src="/images/images/lady.png" alt="" />
+            <img src="./images/images/lady.png" alt="" />
             <p>
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla
               tempore eveniet eligendi pariatur velit recusandae, expedita
@@ -222,7 +239,7 @@
             <span>-Nitya Devil,developer</span>
           </div>
           <div class="slide">
-            <img src="/images/images/lady.png" alt="" />
+            <img src="./images/images/lady.png" alt="" />
             <p>
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla
               tempore eveniet eligendi pariatur velit recusandae, expedita
@@ -448,6 +465,7 @@
         Copyright 2022 name PSD Templare.All Right Reserved.
       </div>
     </footer>
+  </div>
     <script
       type="text/javascript"
       src="//code.jquery.com/jquery-1.11.0.min.js"
