profile section updated

--- a/index.html
+++ b/index.html
@@ -77,17 +77,12 @@
           <h1>About <span>Me</span></h1>
           <h3>Hello! i'm Nityananda</h3>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-            Consectetur sit iste, ipsa harum qui quia a nostrum dolorem
-            incidunt. Id consequatur natus consectetur sit, cumque officiis
-            animi adipisci dolore asperiores quis illum voluptas, error ea
-            dolorum omnis rerum tempore dignissimos inventore atque labore fuga.
-            Voluptates est excepturi voluptatem maiores provident quia tenetur.
-            Doloribus, repudiandae officiis quaerat dolor repellat illum saepe
-            odit aspernatur impedit libero ea quisquam consequuntur alias, sint
-            molestias eaque. Inventore, similique eius eum quo expedita
-            laboriosam culpa ipsam quia, dolorum assumenda atque sint
-            consectetur provident maiores ad!
+            hello everyone
+my name is Nityananda Behera
+B.Tech student specialization in CSE at Government College of Engineering kalahandi Bhawanipatna.
+I'm working with python from last 1-2 years writing code, debugging and building projects in it and I also use django to build high performance web applications interactive to user.
+Currently I'm looking for good opportunities to work with python django at industrial level, building projects on real life with team work to upscale my career and contribute to industry.
+Thank you
           </p>
           <div class="social">
             <a href="https://www.instagram.com/"
@@ -136,7 +131,7 @@
         <p>Hello Fellows here is our services</p>
         <div class="card-wrapper">
           <div class="card">
-            <img src="./images/images/brush.svg" alt="" />
+            <img src="./images/images/bag.svg" alt="" />
             <h2>Graphic Design</h2>
             <p>
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus,
