--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ Thank you
         quas ad.
       </p>
       <div>
-        <button  class="btn btn-primary">Download CV</button>
+        <button class="btn btn-primary">DOWNLOAD CV</button>
       </div>
       
     </section>
