--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               like to work with new technologies coming in the market.
             </p>
             <div>
-              <button class="btn btn-secondary">DOWNLOAD</button>
+              <a href="files/NityaREsume.pdf" target="blank"><button class="btn btn-secondary">DOWNLOAD</button></a>
             </div>
           </div>
         </div>
@@ -188,7 +188,7 @@ Thank you
         quas ad.
       </p>
       <div>
-        <button class="btn btn-primary">DOWNLOAD CV</button>
+        <a href="files/NityaREsume.pdf" target="blank"><button class="btn btn-primary">DOWNLOAD CV</button></a>
       </div>
       
     </section>
