--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ Thank you
         <p>Hello Fellows here is our services</p>
         <div class="card-wrapper">
           <div class="card">
-            <img src="./images/images/bag.svg" alt="" />
+            <img src="./images/images/pj.svg" alt="" />
             <h2>Graphic Design</h2>
             <p>
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus,
@@ -139,7 +139,7 @@ Thank you
             </p>
           </div>
           <div class="card">
-            <img src="./images/images/brush.svg" alt="" />
+            <img src="./images/images/pj.svg" alt="" />
             <h2>Graphic Design</h2>
             <p>
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus,
@@ -147,7 +147,7 @@ Thank you
             </p>
           </div>
           <div class="card">
-            <img src="./images/images/brush.svg" alt="" />
+            <img src="./images/images/pj.svg" alt="" />
             <h2>Graphic Design</h2>
             <p>
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus,
@@ -155,7 +155,7 @@ Thank you
             </p>
           </div>
           <div class="card">
-            <img src="./images/images/brush.svg" alt="" />
+            <img src="./images/images/pj.svg" alt="" />
             <h2>Graphic Design</h2>
             <p>
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus,
@@ -163,7 +163,7 @@ Thank you
             </p>
           </div>
           <div class="card">
-            <img src="./images/images/brush.svg" alt="" />
+            <img src="./images/images/pj.svg" alt="" />
             <h2>Graphic Design</h2>
             <p>
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus,
@@ -171,7 +171,7 @@ Thank you
             </p>
           </div>
           <div class="card">
-            <img src="./images/images/brush.svg" alt="" />
+            <img src="./images/images/pj.svg" alt="" />
             <h2>Graphic Design</h2>
             <p>
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus,
